fix(Settings): align-items style

--- a/src/renderer/settings/style.scss
+++ b/src/renderer/settings/style.scss
@@ -176,6 +176,7 @@ body {
 .content {
 	flex: 1;
 	display: flex;
+	align-items: flex-start;
 	overflow-y: auto;
 	padding: 22px;
 	justify-content: center;
